# django-language-school

./: .coveragerc  .env-sample  .gitignore  Makefile  README.md  deploy.sh  manage.py  pyproject.toml
.circleci/: config.yml  info.md
docs/source/: architecture.rst  conf.py  index.rst  introduction.rst  settings.rst
fixtures/: create_fixture.sh  fixtures.json
requirements/: base.txt  local.txt
school/: settings.py  urls.py  wsgi.py
school/accounts/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
school/accounts/migrations/: 0001_initial.py  0002_auto_20181219_2003.py
school/accounts/tests/: test_forms.py  test_login.py  test_models.py  test_views.py
school/courses/: admin.py  forms.py  models.py  urls.py  views.py
school/dashboard/: urls.py  views.py
school/settings/: base.py  local.py  production.py  test.py
static/css/: dashboard.css
templates/: base.html  base_accounts.html  home.html  login.html
templates/accounts/: student_confirm_delete.html  student_detail.html  student_form.html  student_list.html  teacher_confirm_delete.html  teacher_detail.html  teacher_form.html  teacher_list.html
templates/courses/: course_detail.html  course_form.html  course_list.html  lesson_detail.html  lesson_form.html  lesson_list.html
templates/dashboard/: base.html  dashboard_header.html  home.html  navbar.html  sidebar.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
(+4 files in other folders)
