[tool.poetry]
name = "language-school"
version = "0.1.0"
description = "Language School Management"
authors = ["Paweł Bednarz <pbedn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"
django-dotenv = "^1.4"
coverage = "^4.5"
django-crispy-forms = "^1.7"
factory-boy = "^2.11"
gunicorn = "^19.9"
psycopg2-binary = "^2.7"
sentry_sdk = "^0.6.9"
sphinx = "^1.8"
sphinx_rtd_theme = "^0.4.2"

[tool.poetry.dev-dependencies]
django-extensions = "^2.1"
black = "18.9b0"
ipython = "^7.2"
